# Project_DB

./: .gitmodules  CMakeLists.txt  DB_client.hpp  DB_controller.cpp  DB_controller.hpp  DB_data.hpp  DB_details.hpp  DB_parcer.hpp  DB_request.hpp  DB_responce.hpp  README.md  main.cpp  observer.hpp  thread_pool.cpp  thread_pool.hpp
build_linux/: CMakeCache.txt  CTestTestfile.cmake  Makefile  TDD_test  cmake_install.cmake  main
build_linux/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_linux/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_linux/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_windows/: 27.DB.sln  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  DATABASE_SQL.sln  TDD_test.vcxproj  TDD_test.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.vcxproj  main.vcxproj.filters
build_windows/Debug/: main.ilk
build_windows/TDD_test.dir/Debug/TDD_test.tlog/: custombuild.read.1.tlog
build_windows/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
build_windows/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
build_windows/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  cmake_install.cmake  googletest-distribution.sln
build_windows/googletest/googlemock/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  cmake_install.cmake  gmock.sln  gmock.vcxproj  gmock.vcxproj.filters  gmock_main.vcxproj  gmock_main.vcxproj.filters
build_windows/googletest/googlemock/gmock.dir/Debug/gmock.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.command.1.tlog  custombuild.write.1.tlog  gmock.lastbuildstate
build_windows/googletest/googlemock/gmock_main.dir/Debug/gmock_main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.read.1.tlog
build_windows/googletest/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  cmake_install.cmake  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
build_windows/lib/Debug/: gtest_main.lib
build_windows/main.dir/Debug/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
tests/: tests.cpp
(+16 files in other folders)
